--- a/CashRegister/CashRegister.UWP/CashRegister.UWP.csproj
+++ b/CashRegister/CashRegister.UWP/CashRegister.UWP.csproj
@@ -97,6 +97,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\QrScanningService.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
