--- a/CashRegister/CashRegister.Android/CashRegister.Android.csproj
+++ b/CashRegister/CashRegister.Android/CashRegister.Android.csproj
@@ -70,6 +70,18 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="OpenFoodFacts4Net.ApiClient">
+      <Version>0.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="OpenFoodFacts4Net.Csv">
+      <Version>0.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="OpenFoodFacts4Net.Json">
+      <Version>0.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="OpenFoodFacts4Net.Taxonomy.Json">
+      <Version>0.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Annotations">
       <Version>28.0.0.3</Version>
     </PackageReference>
