--- a/CashRegister/CashRegister.iOS/CashRegister.iOS.csproj
+++ b/CashRegister/CashRegister.iOS/CashRegister.iOS.csproj
@@ -123,6 +123,18 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="OpenFoodFacts4Net.ApiClient">
+      <Version>0.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="OpenFoodFacts4Net.Csv">
+      <Version>0.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="OpenFoodFacts4Net.Json">
+      <Version>0.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="OpenFoodFacts4Net.Taxonomy.Json">
+      <Version>0.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
     <PackageReference Include="ZXing.Net.Mobile">
