--- a/CashRegister/CashRegister/CashRegister.csproj
+++ b/CashRegister/CashRegister/CashRegister.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Adyen" Version="8.1.0" />
+    <PackageReference Include="System.Text.Json" Version="6.0.3" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
     <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.4.1" />
