--- a/CashRegister/CashRegister.iOS/CashRegister.iOS.csproj
+++ b/CashRegister/CashRegister.iOS/CashRegister.iOS.csproj
@@ -135,6 +135,9 @@
     <PackageReference Include="OpenFoodFacts4Net.Taxonomy.Json">
       <Version>0.1.0</Version>
     </PackageReference>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.8.116</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
     <PackageReference Include="ZXing.Net.Mobile">
