--- a/CashRegister/CashRegister.UWP/CashRegister.UWP.csproj
+++ b/CashRegister/CashRegister.UWP/CashRegister.UWP.csproj
@@ -144,6 +144,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MySqlConnector">
+      <Version>2.1.8</Version>
+    </PackageReference>
     <PackageReference Include="OpenFoodFacts4Net.ApiClient">
       <Version>0.3.0</Version>
     </PackageReference>
