--- a/CashRegister/CashRegister.iOS/CashRegister.iOS.csproj
+++ b/CashRegister/CashRegister.iOS/CashRegister.iOS.csproj
@@ -123,6 +123,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MySqlConnector">
+      <Version>2.1.8</Version>
+    </PackageReference>
     <PackageReference Include="OpenFoodFacts4Net.ApiClient">
       <Version>0.3.0</Version>
     </PackageReference>
