--- a/CashRegister/CashRegister/CashRegister.csproj
+++ b/CashRegister/CashRegister/CashRegister.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MySqlConnector" Version="2.1.8" />
     <PackageReference Include="OpenFoodFacts4Net.ApiClient" Version="0.3.0" />
     <PackageReference Include="OpenFoodFacts4Net.Csv" Version="0.2.0" />
     <PackageReference Include="OpenFoodFacts4Net.Json" Version="0.2.0" />
@@ -28,9 +29,5 @@
     <EmbeddedResource Update="View\CashRegisterView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Database\" />
   </ItemGroup>
 </Project>
