Added statistics view

--- a/CashRegister/CashRegister/CashRegister.csproj
+++ b/CashRegister/CashRegister/CashRegister.csproj
@@ -35,5 +35,8 @@
     <EmbeddedResource Update="View\SignupView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\StatisticsView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
