now working, trying with .env now (changing pc)

--- a/CashRegister/CashRegister.UWP/CashRegister.UWP.csproj
+++ b/CashRegister/CashRegister.UWP/CashRegister.UWP.csproj
@@ -178,6 +178,10 @@
       <Name>CashRegister</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".env" />
+    <None Include=".env.example" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
