--- a/CashRegister/CashRegister.Android/CashRegister.Android.csproj
+++ b/CashRegister/CashRegister.Android/CashRegister.Android.csproj
@@ -101,6 +101,8 @@
     <Compile Include="Services\QrScanningService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".env" />
+    <None Include=".env.example" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
