--- a/CashRegister/CashRegister.iOS/CashRegister.iOS.csproj
+++ b/CashRegister/CashRegister.iOS/CashRegister.iOS.csproj
@@ -65,6 +65,8 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <None Include=".env" />
+    <None Include=".env.example" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
