--- a/CashRegister/CashRegister/.env.example
+++ b/CashRegister/CashRegister/.env.example
@@ -1,1 +1,3 @@
-CASHREGISTER_API_KEY=test_api_key
+.ENV HERE IS NOT LOADED ON CORRESPONDING "PROFILE" (Android, IOS, UWP)
+
+so one .env per profile
