--- a/CashRegister/CashRegister.Android/CashRegister.Android.csproj
+++ b/CashRegister/CashRegister.Android/CashRegister.Android.csproj
@@ -94,7 +94,6 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Database\SQLiteDroid.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -124,6 +123,7 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Database\" />
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
